examples/test/testpolicy10445.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10445
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key28: value0
      key25: value8
      key29: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value33
      podSelector:
        matchLabels:
          key22: value2
